--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
+        "saade/filament-fullcalendar": "^3.0",
         "wire-elements/modal": "^2.0"
     },
     "require-dev": {
